--- a/styles.css
+++ b/styles.css
@@ -4,7 +4,7 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: #f0f0f0; /* Background color */
+    background-color: #000; /* Black background */
 }
 
 .container {
@@ -12,13 +12,16 @@ body {
     width: 300px;
     height: 300px;
     border-radius: 50%;
-    overflow: hidden;
+    border: 2px solid #fff; /* White outline */
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .ball {
     position: absolute;
-    width: 100px;
-    height: 100px;
+    width: 80px;
+    height: 80px;
     background-color: #FF5733; /* Ball color */
     border-radius: 50%;
     display: flex;
@@ -31,11 +34,11 @@ body {
 }
 
 @keyframes moveBall {
-    0% { top: 0; left: 0; }
-    25% { top: 0; left: 200px; }
-    50% { top: 200px; left: 200px; }
-    75% { top: 200px; left: 0; }
-    100% { top: 0; left: 0; }
+    0% { transform: translate(0, 0); }
+    25% { transform: translate(180px, 0); }
+    50% { transform: translate(180px, 180px); }
+    75% { transform: translate(0, 180px); }
+    100% { transform: translate(0, 0); }
 }
 
 #timer {
